--- a/신한은행_login.html
+++ b/신한은행_login.html
@@ -545,7 +545,7 @@
         <div id="header">
             <div id="h_top">
                 <div id="logo">
-                <a href="#"><img src="img(신한)/logo.PNG"></a>
+                <a href="../8team/신한은행_main.html"><img src="img(신한)/logo.PNG"></a>
                 </div>
                 <div id="hbutton">
                     <ul>
