--- a/신한은행회원가입.html
+++ b/신한은행회원가입.html
@@ -28,10 +28,6 @@
 
         #menu1 a {
             color: white;
-            
-            /* text-decoration: none; */
-            /* display: flex; */
-            /* align-items: center; */
         }
 
         ul {
@@ -42,7 +38,7 @@
         }
 
         li {
-            display: inline-block;
+            display: inline;
             list-style: none;
         }
 
@@ -224,6 +220,7 @@
 
         .item2 img {
             padding: 30px;
+
         }
 
         .item2 span {
@@ -354,7 +351,7 @@
 
 <body>
     <div id="header">
-        <div><a href="/"><img id="logo" src="sp_layout.png"></a></div>
+        <div><a href="../8team/신한은행_main.html"><img id="logo" src="../8team/img(신한)/sp_layout.png"></a></div>
         <div id="header">
             <ul>
                 <li><a href="">개인</a></li>
@@ -375,7 +372,7 @@
             <ul>
                 <li><a href="">신한멤버스</a></li>
                 <li><a href="">GLOBAL</a></li>
-                <li><a href=""><img src="allsearch.png"></a></li>
+                <li><a href=""><img src="../8team/img(신한)/allsearch.png"></a></li>
             </ul>
         </div>
     </div>
@@ -392,9 +389,9 @@
         </ul>
     </div>
     <div id="menu2">
-        고객센터 > 회원서비스 > 회원가입 > <img src="three line.png"><span>회원가입안내</span><img src="down.png" width="20" height="20">
+        고객센터 > 회원서비스 > 회원가입 > <img src="../8team/img(신한)/three line.png"><span>회원가입안내</span><img src="../8team/img(신한)/down.png" width="20" height="20">
         <div class="login">
-            <a href="/"><img src="login.png"></a>
+            <a href="../8team/신한은행_login.html"><img src="../8team/img(신한)/login.png"></a>
         </div>
     </div>
     <!-- <div id="login">
@@ -404,7 +401,7 @@
     <br></br>
     <div id="txt_title">회원가입안내
         <div id="txt_title">
-            <img src="T.png"><img src="print.png">
+            <img src="../8team/img(신한)/T.png"><img src="../8team/img(신한)/print.png">
         </div>
     </div>
     <hr>
@@ -413,7 +410,7 @@
         <div class="content">
             <div class="item1">
                 <div class="text-sinhan">
-                    <b>신한은행</b>에 오신것을 환영합니다.<img src="comp2.png">
+                    <b>신한은행</b>에 오신것을 환영합니다.<img src="../8team/img(신한)/comp2.png">
                 </div>
                 <br></br>
                 <div class="text-sinhan2">신한은행 홈페이지 회원(14세 이상 개인)으로 가입하시면 각종상담,이벤트참여,계좌조회 등
@@ -424,7 +421,7 @@
                 <br><b>- 회원 유형에 따라 가입 절차가 다르니 고객님께 해당하는 유형을 선택하여 주시기 바랍니다.</b>
             </div>
             <div class="item2">
-                <img src="solo.png"><img src="giup.png"><img src="i-pin.png"> <br>
+                <img src="../8team/img(신한)/solo.png"><img src="../8team/img(신한)/giup.png"><img src="../8team/img(신한)/i-pin.png"> <br>
                 <span>개인회원</span> <span> 기업회원</span> <span>i-PIN회원</span>
             </div>
 
@@ -458,11 +455,11 @@
                 </div>
             </div>
             <div class="item6">
-                <div class="text-c"><img src="check.png" width="20px"> 알아두세요.
+                <div class="text-c"><img src="../8team/img(신한)/check.png" width="20px"> 알아두세요.
                     <br><hr><br>
                 </div>
                 - 회원에 가입하시면 '신한은행 홈페이지 회원'으로 가입이 되며, 향후 추가서비스 발생시에도 자동으로 회원 가입이 됩니다.<br>
-                <br>- 개인회원(주민번호 방식) 또는 기업회원 가입 후 간편계좌 등록을 하시면 인증서 없이도 간편 계좌조회 서비스를 이용하실 수 있습니다.<br>
+                <br>- 개인회원(주민번호 방식) 또는 기업회원 가입 후 간편계좌 등록을 하시면 인증서 없이도 간편계좌조회 서비스를 이용하실 수 있습니다.<br>
                 (단,i-PIN 회원은 제외)<br>
                 <br>- 신한은행은 정보통신망 이용촉진에 관한 법률등 관련법령에 따라 고객 동의를 받은 후 회원가입을 받고 있습니다.<br>
                 <br>- 2006년 9월 24일부터 개정된 주민등록법에 의해 타인의 주민등록번호를 도용하여 홈페이지 회원가입을 하는 등 다른 사람의 주민등록번호를<br>
@@ -487,7 +484,7 @@
             <div id="input">
                 <input type="button" value=" 글로벌 ">
                 <input type="button" value=" 패밀리 ">
-                <a href="#header"><img src="up.png" width="30px" height="30px" title="위로가기"></a>
+                <a href="#header"><img src="../8team/img(신한)/up.png" width="30px" height="30px" title="위로가기"></a>
             </div>
         </nav>
         <section>
