회원가입창 주소 지정

--- a/신한은행_login.html
+++ b/신한은행_login.html
@@ -315,12 +315,13 @@
             border: 1px solid #c2c2c2;
             background-color: #f3f4f8;
         }
-        #login_RBottom p{
+        #login_RBottom a{
             padding-top: 50px;
             margin-bottom: -30px;
             color: #343434;
             font-size: 13px;
             font-family: Dotum;
+            text-decoration: none;
         }
         #RToppass a img{
             width: 20px;
@@ -653,7 +654,7 @@
                                         </div>
                                     </div>
                                     <div id="login_RBottom">
-                                        <p>아이디 찾기 <highlight3>ㅣ</highlight3> 비밀번호 재설정 <highlight3>ㅣ</highlight3> 회원가입</p>
+                                        <a href ="../8team/신한은행회원가입.html">아이디 찾기 <highlight3>ㅣ</highlight3> 비밀번호 재설정 <highlight3>ㅣ</highlight3> 회원가입</a>
                                     </div>
                                 </div>
                             </td>
