--- a/신한은행_login.html
+++ b/신한은행_login.html
@@ -438,12 +438,14 @@
             width: 55px;
             height: 55px;
         }
+       
         #service2name ul li{
             padding-top: 8px;
             font-size: 13px;
             color: #777;
             margin-top: -100px;
             height: 20px;
+            list-style: none;
         }
         #service2number{
             position: relative;
@@ -546,7 +548,7 @@
         <div id="header">
             <div id="h_top">
                 <div id="logo">
-                <a href="../8team/신한은행_main.html"><img src="img(신한)/logo.PNG"></a>
+                <a href="#"><img src="img(신한)/logo.PNG"></a>
                 </div>
                 <div id="hbutton">
                     <ul>
@@ -654,7 +656,7 @@
                                         </div>
                                     </div>
                                     <div id="login_RBottom">
-                                        <a href ="../8team/신한은행회원가입.html">아이디 찾기 <highlight3>ㅣ</highlight3> 비밀번호 재설정 <highlight3>ㅣ</highlight3> 회원가입</a>
+                                        <a href="../8team/신한은행회원가입.html">아이디 찾기 <highlight3>ㅣ</highlight3> 비밀번호 재설정 <highlight3>ㅣ</highlight3> 회원가입</a>
                                     </div>
                                 </div>
                             </td>
