--- a/신한은행_main.html
+++ b/신한은행_main.html
@@ -98,7 +98,7 @@
             display: flex;
             width:19px;
             height:18px;
-            background:url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -940px -10px no-repeat;
+            background: url(../8team/img/img_intro.png) -940px -10px no-repeat;
             margin-right: 40px;
             font-size: 13px;
             color: #777777;
@@ -116,7 +116,7 @@
 
         #header>div:nth-of-type(2)>a {
             height: 40px;
-            background: url(https://image.shinhan.com/rib2017/images/layout/sp_layout.png) 0px 5px no-repeat;
+            background: url(../8team/img/sp_layout2.png) 0px 5px no-repeat;
         }
 
         /* 신한은행 제목 */
@@ -229,7 +229,7 @@
         #main>div:nth-of-type(1) {
             display: flex;
             align-items: center;
-            background-image: url(https://image.shinhan.com/rib2017/download/main/20220324024917_19602375_intro_bg_main220324.png);
+            background: url(../8team/img/20220324024917_19602375_intro_bg_main220324.png);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: 1700px 450px;
@@ -256,7 +256,7 @@
             margin: 10px 60px;
             width: 390px;
             height: 150px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -10px -18px no-repeat;
+            background: url(../8team/img/img_intro.png) -10px -18px no-repeat;
         }
 
         #main>div:nth-of-type(1)>div>ul.icon1:nth-child(1) li {
@@ -283,14 +283,14 @@
             display: block;
             width: 24px;
             height: 24px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -841px -10px no-repeat;
+            background: url(../8team/img/img_intro.png) -841px -10px no-repeat;
         }
 
         #main>div:nth-of-type(1)>div>ul.icon1:nth-child(1) li:nth-of-type(2)>a:nth-of-type(1) {
             display: block;
             width: 24px;
             height: 24px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -876px -10px no-repeat;
+            background: url(../8team/img/img_intro.png) -876px -10px no-repeat;
         }
 
         #main>div:nth-of-type(1)>div>ul.icon1:nth-child(1) li:nth-of-type(3)>a:nth-of-type(1) {
@@ -514,31 +514,31 @@
 
         #main>div:nth-of-type(2)>div:nth-of-type(1)>ol>li:nth-of-type(1)>span {
             background-color: rgb(0, 104, 178);
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -402px -11px no-repeat;
+            background: url(../8team/img/img_intro.png) -402px -11px no-repeat;
             border-radius: 100%;
         }
 
         #main>div:nth-of-type(2)>div:nth-of-type(1)>ol>li:nth-of-type(2)>span {
             background-color: rgb(0, 104, 178);
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -490px -11px no-repeat;
+            background: url(../8team/img/img_intro.png) -490px -11px no-repeat;
             border-radius: 100%;
         }
 
         #main>div:nth-of-type(2)>div:nth-of-type(1)>ol>li:nth-of-type(3)>span {
             background-color: rgb(0, 104, 178);
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -578px -11px no-repeat;
+            background: url(../8team/img/img_intro.png) -578px -11px no-repeat;
             border-radius: 100%;
         }
 
         #main>div:nth-of-type(2)>div:nth-of-type(1)>ol>li:nth-of-type(4)>span {
             background-color: rgb(0, 104, 178);
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -666px -11px no-repeat;
+            background: url(../8team/img/img_intro.png) -666px -11px no-repeat;
             border-radius: 100%;
         }
 
         #main>div:nth-of-type(2)>div:nth-of-type(1)>ol>li:nth-of-type(5)>span {
             background-color: rgb(0, 104, 178);
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -754px -11px no-repeat;
+            background: url(../8team/img/img_intro.png) -754px -11px no-repeat;
             border-radius: 100%;
         }
 
@@ -571,49 +571,49 @@
         #main>div:nth-of-type(4)>a:nth-of-type(1)>span {
             height: 15px;
             width: 15px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -902px -44px no-repeat;
+            background: url(../8team/img/img_intro.png) -902px -44px no-repeat;
         }
 
         #main>div:nth-of-type(4)>a:nth-of-type(2)>span {
             height: 15px;
             width: 15px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -902px -44px no-repeat;
+            background: url(../8team/img/img_intro.png) -902px -44px no-repeat;
         }
 
         #main>div:nth-of-type(4)>a:nth-of-type(3)>span {
             height: 15px;
             width: 15px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -902px -44px no-repeat;
+            background: url(../8team/img/img_intro.png) -902px -44px no-repeat;
         }
 
         #main>div:nth-of-type(4)>a:nth-of-type(4)>span {
             height: 15px;
             width: 15px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -902px -44px no-repeat;
+            background: url(../8team/img/img_intro.png) -902px -44px no-repeat;
         }
 
         #main>div:nth-of-type(4)>a:nth-of-type(5)>span {
             height: 15px;
             width: 15px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -902px -44px no-repeat;
+            background: url(../8team/img/img_intro.png) -902px -44px no-repeat;
         }
 
         #main>div:nth-of-type(4)>a:nth-of-type(6)>span {
             height: 15px;
             width: 15px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -902px -44px no-repeat;
+            background: url(../8team/img/img_intro.png) -902px -44px no-repeat;
         }
 
         #main>div:nth-of-type(4)>a:nth-of-type(7)>span {
             height: 15px;
             width: 15px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -902px -44px no-repeat;
+            background: url(../8team/img/img_intro.png) -902px -44px no-repeat;
         }
 
         #main>div:nth-of-type(4)>a:nth-of-type(8)>span {
             height: 15px;
             width: 15px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -902px -44px no-repeat;
+            background: url(../8team/img/img_intro.png) -902px -44px no-repeat;
         }
         
         /* 새소식 ~ 전자상환위임장 조회 영역 */
@@ -667,7 +667,7 @@
             background-color: white;
             width: 20px;
             height: 20px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -872px -44px no-repeat;
+            background: url(../8team/img/img_intro.png) -872px -44px no-repeat;
             position: relative;
             margin: auto 70%;
         }
@@ -873,35 +873,35 @@
             display: block;
             width: 26px;
             height: 26px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -402px -98px no-repeat;
+            background: url(../8team/img/img_intro.png) -402px -98px no-repeat;
         }
         /* 네이버 마크 */
         #footer>div:nth-of-type(1)>div:nth-of-type(3)>ul>li:nth-of-type(2)>a {
             display: block;
             width: 26px;
             height: 26px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -474px -98px no-repeat;
+            background: url(../8team/img/img_intro.png) -474px -98px no-repeat;
         }
         /* 인스타 마크 */
         #footer>div:nth-of-type(1)>div:nth-of-type(3)>ul>li:nth-of-type(3)>a {
             display: block;
             width: 26px;
             height: 26px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -510px -98px no-repeat;
+            background: url(../8team/img/img_intro.png) -510px -98px no-repeat;
         }
         /* 유튜브 마크 */
         #footer>div:nth-of-type(1)>div:nth-of-type(3)>ul>li:nth-of-type(4)>a {
             display: block;
             width: 26px;
             height: 26px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -546px -98px no-repeat;
+            background: url(../8team/img/img_intro.png) -546px -98px no-repeat;
         }
         /* wia 마크 */
         #footer>div:nth-of-type(1)>div:nth-of-type(3)>ul>li:nth-of-type(5)>a {
             display: block;
             width: 42px;
             height: 30px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -582px -98px no-repeat;
+            background: url(../8team/img/img_intro.png) -582px -98px no-repeat;
         }
         /* kcsi ~ Q 영역 */
         #footer>div:nth-of-type(1)>div:nth-of-type(4) {
@@ -936,28 +936,28 @@
         /* 남색 마크 */
         #footer>div:nth-of-type(1)>div:nth-of-type(4)>ul>li:nth-of-type(1)>a {
             display: block;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -370px -346px no-repeat;
+            background: url(../8team/img/img_intro.png) -370px -346px no-repeat;
             width: 25px;
             height: 25px;
         }
         /* 연두색 마크 */
         #footer>div:nth-of-type(1)>div:nth-of-type(4)>ul>li:nth-of-type(2)>a {
             display: block;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -170px -346px no-repeat;
+            background: url(../8team/img/img_intro.png) -170px -346px no-repeat;
             width: 25px;
             height: 25px;
         }
         /* 주황색 마크 */
         #footer>div:nth-of-type(1)>div:nth-of-type(4)>ul>li:nth-of-type(3)>a {
             display: block;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -450px -346px no-repeat;
+            background: url(../8team/img/img_intro.png) -450px -346px no-repeat;
             width: 25px;
             height: 25px;
         }
         /* q 마크 */
         #footer>div:nth-of-type(1)>div:nth-of-type(4)>ul>li:nth-of-type(4)>a {
             display: block;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro.png) -330px -346px no-repeat;
+            background: url(../8team/img/img_intro.png) -330px -346px no-repeat;
             width: 25px;
             height: 25px;
         }
@@ -1005,7 +1005,7 @@
         
         #footer>div:nth-of-type(1)>div:nth-of-type(5) div:nth-of-type(1)>div:nth-of-type(1)>a:nth-of-type(2) {
             display: flex;
-            background: url(https://image.shinhan.com/rib2017/images/layout/sp_layout.png) -221px -34px no-repeat;
+            background: url(../8team/img/sp_layout2.png) -221px -34px no-repeat;
             color: white;
             width: 19px;
             height: 12px;
@@ -1022,7 +1022,7 @@
 
         #footer>div:nth-of-type(1)>div:nth-of-type(5) div:nth-of-type(2)>div:nth-of-type(1)>a:nth-of-type(2) {
             display: flex;
-            background: url(https://image.shinhan.com/rib2017/images/layout/sp_layout.png) -221px -34px no-repeat;
+            background: url(../8team/img/sp_layout2.png) -221px -34px no-repeat;
             color: white;
             width: 19px;
             height: 12px;
