--- a/신한은행_main.html
+++ b/신한은행_main.html
@@ -297,7 +297,7 @@
             display: block;
             width: 24px;
             height: 24px;
-            background: url(https://image.shinhan.com/rib2017/images/hpe/main/img_intro_cloud.png) 0 0 no-repeat;
+            background: url(../8team/img/img_intro_cloud.png) 0 0 no-repeat;
         }
 
         #main>div:nth-of-type(1) div:nth-of-type(1) ul li {
@@ -1257,28 +1257,28 @@
                     <ul>
                         <li>
                             <a href="https://bank.shinhan.com/index.jsp#020102010110">예금</a>
-                            <img src="https://image.shinhan.com/rib2017/download/main/20211029012346_11081021_intro_230011986.png"
+                            <img src="../8team/img/20211029012346_11081021_intro_230011986.png"
                                 alt="">
                             신한 안녕, 반가워 적금
                             <p>새롭게 금융거래를 시작하는 고객님을 응원하는 적금!</p>
                         </li>
                         <li>
                             <a href="https://bank.shinhan.com/index.jsp#020102010110">예금</a>
-                            <img src="https://image.shinhan.com/rib2017/download/main/20170501074621_06500110_prod02.png"
+                            <img src="../8team/img/20170501074621_06500110_prod02.png"
                                 alt="">
                             주택청약 종합저축
                             <p>내집마련과 목돈 마련 준비 주택정약종합저축으로 한번에!</p>
                         </li>
                         <li>
                             <a href="https://bank.shinhan.com/index.jsp#020306010000">대출</a>
-                            <img src="https://image.shinhan.com/rib2017/download/main/20170501074653_06500110_prod03.png"
+                            <img src="../8team/img/20170501074653_06500110_prod03.png"
                                 alt="">
                             신한 MY CAR 대출
                             <p>자동차 구입시 은행 방문없이 대출실행까지 되는 자동차대출</p>
                         </li>
                         <li>
                             <a href="https://bank.shinhan.com/index.jsp#020703010600">골드/실버</a>
-                            <img src="https://image.shinhan.com/rib2017/download/main/20170501074719_06500110_prod04.png"
+                            <img src="../8team/img/20170501074719_06500110_prod04.png"
                                 alt="">
                             신한골드리슈골드테그
                             <p>금의 입출금 거래가 자유로운 대표 골드상품</p>
